apitax/grammar/build/src/Ah210Parser.py
# Generated from src/Ah210.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class Ah210Parser ( Parser ):

    grammarFileName = "Ah210.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'>'", "'<'", "'>='", "'<='", "'=='", 
                     "'!='", "'&&'", "'||'", "'++'", "'--'", "'+='", "'-='", 
                     "'*='", "'/='", "'='", "'+'", "'-'", "'*'", "'/'", 
                     "'^'", "'!'", "'_'", "'.'", "':'", "'%'", "','", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'{%'", "'%}'", "'{{'", "'}}'", "'{'", 
                     "'}'", "'('", "')'", "'['", "']'", "'$'", "';'", "'#'", 
                     "'->'" ]

    symbolicNames = [ "<INVALID>", "GT", "LT", "GE", "LE", "EQ", "NEQ", 
                      "SAND", "SOR", "D_PLUS", "D_MINUS", "PE", "ME", "MUE", 
                      "DE", "EQUAL", "PLUS", "MINUS", "MUL", "DIV", "POW", 
                      "NOT", "ULINE", "DOT", "COLON", "PERCENT", "COMMA", 
                      "INT", "FLOAT", "FALSE", "TRUE", "STRING", "HEX", 
                      "EXECUTEOPEN", "EXECUTECLOSE", "MUSTACHEOPEN", "MUSTACHECLOSE", 
                      "BLOCKOPEN", "BLOCKCLOSE", "LPAREN", "RPAREN", "SOPEN", 
                      "SCLOSE", "VARIABLE_ID", "TERMINATOR", "HASH", "ARROW", 
                      "AND", "OR", "RETURNS", "EACH", "IF", "THEN", "ELSE", 
                      "FOR", "WHILE", "ERROR", "TYPE_INT", "TYPE_DICT", 
                      "TYPE_LIST", "TYPE_DEC", "TYPE_STR", "TYPE_BOOL", 
                      "LOGIN", "LOG", "ENDPOINT", "SIG", "OPTIONS", "NAME", 
                      "IMPORT", "EXPORT", "DEL", "URL", "AUTH", "COMMANDTAX", 
                      "SCRIPT", "CUSTOM", "GET", "POST", "PUT", "PATCH", 
                      "DELETE", "IN", "SET", "ASYNC", "AWAIT", "REQUEST", 
                      "LABEL", "BLOCK_COMMENT", "LINE_COMMENT", "NEWLINE", 
                      "WS" ]

    RULE_prog = 0
    RULE_statements = 1
    RULE_statement = 2
    RULE_terminated = 3
    RULE_non_terminated = 4
    RULE_executers = 5
    RULE_expr = 6
    RULE_assignment = 7
    RULE_flow = 8
    RULE_if_statement = 9
    RULE_while_statement = 10
    RULE_for_statement = 11
    RULE_each_statement = 12
    RULE_condition = 13
    RULE_block = 14
    RULE_callback = 15
    RULE_callback_block = 16
    RULE_optional_parameters_block = 17
    RULE_sig_parameter = 18
    RULE_call_parameter = 19
    RULE_optional_parameter = 20
    RULE_commandtax = 21
    RULE_execute = 22
    RULE_async_execute = 23
    RULE_await = 24
    RULE_labels = 25
    RULE_label_comp = 26
    RULE_params_statement = 27
    RULE_options_statement = 28
    RULE_delete_statement = 29
    RULE_error_statement = 30
    RULE_return_statement = 31
    RULE_login_statement = 32
    RULE_endpoint_statement = 33
    RULE_scoping = 34
    RULE_name = 35
    RULE_exports = 36
    RULE_imports = 37
    RULE_casting = 38
    RULE_auth = 39
    RULE_url = 40
    RULE_log = 41
    RULE_count = 42
    RULE_inject = 43
    RULE_atom = 44
    RULE_obj_dict = 45
    RULE_obj_list = 46
    RULE_string = 47
    RULE_number = 48
    RULE_boolean = 49

    ruleNames =  [ "prog", "statements", "statement", "terminated", "non_terminated", 
                   "executers", "expr", "assignment", "flow", "if_statement", 
                   "while_statement", "for_statement", "each_statement", 
                   "condition", "block", "callback", "callback_block", "optional_parameters_block", 
                   "sig_parameter", "call_parameter", "optional_parameter", 
                   "commandtax", "execute", "async_execute", "await", "labels", 
                   "label_comp", "params_statement", "options_statement", 
                   "delete_statement", "error_statement", "return_statement", 
                   "login_statement", "endpoint_statement", "scoping", "name", 
                   "exports", "imports", "casting", "auth", "url", "log", 
                   "count", "inject", "atom", "obj_dict", "obj_list", "string", 
                   "number", "boolean" ]

    EOF = Token.EOF
    GT=1
    LT=2
    GE=3
    LE=4
    EQ=5
    NEQ=6
    SAND=7
    SOR=8
    D_PLUS=9
    D_MINUS=10
    PE=11
    ME=12
    MUE=13
    DE=14
    EQUAL=15
    PLUS=16
    MINUS=17
    MUL=18
    DIV=19
    POW=20
    NOT=21
    ULINE=22
    DOT=23
    COLON=24
    PERCENT=25
    COMMA=26
    INT=27
    FLOAT=28
    FALSE=29
    TRUE=30
    STRING=31
    HEX=32
    EXECUTEOPEN=33
    EXECUTECLOSE=34
    MUSTACHEOPEN=35
    MUSTACHECLOSE=36
    BLOCKOPEN=37
    BLOCKCLOSE=38
    LPAREN=39
    RPAREN=40
    SOPEN=41
    SCLOSE=42
    VARIABLE_ID=43
    TERMINATOR=44
    HASH=45
    ARROW=46
    AND=47
    OR=48
    RETURNS=49
    EACH=50
    IF=51
    THEN=52
    ELSE=53
    FOR=54
    WHILE=55
    ERROR=56
    TYPE_INT=57
    TYPE_DICT=58
    TYPE_LIST=59
    TYPE_DEC=60
    TYPE_STR=61
    TYPE_BOOL=62
    LOGIN=63
    LOG=64
    ENDPOINT=65
    SIG=66
    OPTIONS=67
    NAME=68
    IMPORT=69
    EXPORT=70
    DEL=71
    URL=72
    AUTH=73
    COMMANDTAX=74
    SCRIPT=75
    CUSTOM=76
    GET=77
    POST=78
    PUT=79
    PATCH=80
    DELETE=81
    IN=82
    SET=83
    ASYNC=84
    AWAIT=85
    REQUEST=86
    LABEL=87
    BLOCK_COMMENT=88
    LINE_COMMENT=89
    NEWLINE=90
    WS=91

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statements(self):
            return self.getTypedRuleContext(Ah210Parser.StatementsContext,0)


        def EOF(self):
            return self.getToken(Ah210Parser.EOF, 0)

        def getRuleIndex(self):
            return Ah210Parser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = Ah210Parser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.statements()
            self.state = 101
            self.match(Ah210Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Ah210Parser.StatementContext)
            else:
                return self.getTypedRuleContext(Ah210Parser.StatementContext,i)


        def getRuleIndex(self):
            return Ah210Parser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = Ah210Parser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Ah210Parser.NOT) | (1 << Ah210Parser.MUSTACHEOPEN) | (1 << Ah210Parser.RETURNS) | (1 << Ah210Parser.EACH) | (1 << Ah210Parser.IF) | (1 << Ah210Parser.FOR) | (1 << Ah210Parser.WHILE) | (1 << Ah210Parser.ERROR))) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & ((1 << (Ah210Parser.LOG - 64)) | (1 << (Ah210Parser.SIG - 64)) | (1 << (Ah210Parser.OPTIONS - 64)) | (1 << (Ah210Parser.NAME - 64)) | (1 << (Ah210Parser.IMPORT - 64)) | (1 << (Ah210Parser.EXPORT - 64)) | (1 << (Ah210Parser.DEL - 64)) | (1 << (Ah210Parser.URL - 64)) | (1 << (Ah210Parser.AUTH - 64)) | (1 << (Ah210Parser.COMMANDTAX - 64)) | (1 << (Ah210Parser.SCRIPT - 64)) | (1 << (Ah210Parser.CUSTOM - 64)) | (1 << (Ah210Parser.GET - 64)) | (1 << (Ah210Parser.POST - 64)) | (1 << (Ah210Parser.PUT - 64)) | (1 << (Ah210Parser.PATCH - 64)) | (1 << (Ah210Parser.DELETE - 64)) | (1 << (Ah210Parser.SET - 64)) | (1 << (Ah210Parser.ASYNC - 64)) | (1 << (Ah210Parser.AWAIT - 64)) | (1 << (Ah210Parser.LABEL - 64)))) != 0):
                self.state = 103
                self.statement()
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def terminated(self):
            return self.getTypedRuleContext(Ah210Parser.TerminatedContext,0)


        def non_terminated(self):
            return self.getTypedRuleContext(Ah210Parser.Non_terminatedContext,0)


        def NOT(self):
            return self.getToken(Ah210Parser.NOT, 0)

        def getRuleIndex(self):
            return Ah210Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = Ah210Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==Ah210Parser.NOT:
                self.state = 109
                self.match(Ah210Parser.NOT)


            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Ah210Parser.MUSTACHEOPEN, Ah210Parser.RETURNS, Ah210Parser.EACH, Ah210Parser.ERROR, Ah210Parser.LOG, Ah210Parser.SIG, Ah210Parser.OPTIONS, Ah210Parser.NAME, Ah210Parser.IMPORT, Ah210Parser.EXPORT, Ah210Parser.DEL, Ah210Parser.URL, Ah210Parser.AUTH, Ah210Parser.COMMANDTAX, Ah210Parser.SCRIPT, Ah210Parser.CUSTOM, Ah210Parser.GET, Ah210Parser.POST, Ah210Parser.PUT, Ah210Parser.PATCH, Ah210Parser.DELETE, Ah210Parser.SET, Ah210Parser.ASYNC, Ah210Parser.AWAIT, Ah210Parser.LABEL]:
                self.state = 112
                self.terminated()
                pass
            elif token in [Ah210Parser.IF, Ah210Parser.FOR, Ah210Parser.WHILE]:
                self.state = 113
                self.non_terminated()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TerminatedContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TERMINATOR(self):
            return self.getToken(Ah210Parser.TERMINATOR, 0)

        def each_statement(self):
            return self.getTypedRuleContext(Ah210Parser.Each_statementContext,0)


        def params_statement(self):
            return self.getTypedRuleContext(Ah210Parser.Params_statementContext,0)


        def options_statement(self):
            return self.getTypedRuleContext(Ah210Parser.Options_statementContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(Ah210Parser.Return_statementContext,0)


        def error_statement(self):
            return self.getTypedRuleContext(Ah210Parser.Error_statementContext,0)


        def delete_statement(self):
            return self.getTypedRuleContext(Ah210Parser.Delete_statementContext,0)


        def await(self):
            return self.getTypedRuleContext(Ah210Parser.AwaitContext,0)


        def executers(self):
            return self.getTypedRuleContext(Ah210Parser.ExecutersContext,0)


        def assignment(self):
            return self.getTypedRuleContext(Ah210Parser.AssignmentContext,0)


        def scoping(self):
            return self.getTypedRuleContext(Ah210Parser.ScopingContext,0)


        def log(self):
            return self.getTypedRuleContext(Ah210Parser.LogContext,0)


        def auth(self):
            return self.getTypedRuleContext(Ah210Parser.AuthContext,0)


        def url(self):
            return self.getTypedRuleContext(Ah210Parser.UrlContext,0)


        def getRuleIndex(self):
            return Ah210Parser.RULE_terminated

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerminated" ):
                listener.enterTerminated(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerminated" ):
                listener.exitTerminated(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerminated" ):
                return visitor.visitTerminated(self)
            else:
                return visitor.visitChildren(self)




    def terminated(self):

        localctx = Ah210Parser.TerminatedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_terminated)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Ah210Parser.EACH]:
                self.state = 116
                self.each_statement()
                pass
            elif token in [Ah210Parser.SIG]:
                self.state = 117
                self.params_statement()
                pass
            elif token in [Ah210Parser.OPTIONS]:
                self.state = 118
                self.options_statement()
                pass
            elif token in [Ah210Parser.RETURNS]:
                self.state = 119
                self.return_statement()
                pass
            elif token in [Ah210Parser.ERROR]:
                self.state = 120
                self.error_statement()
                pass
            elif token in [Ah210Parser.DEL]:
                self.state = 121
                self.delete_statement()
                pass
            elif token in [Ah210Parser.AWAIT]:
                self.state = 122
                self.await()
                pass
            elif token in [Ah210Parser.COMMANDTAX, Ah210Parser.SCRIPT, Ah210Parser.CUSTOM, Ah210Parser.GET, Ah210Parser.POST, Ah210Parser.PUT, Ah210Parser.PATCH, Ah210Parser.DELETE, Ah210Parser.ASYNC]:
                self.state = 123
                self.executers()
                pass
            elif token in [Ah210Parser.MUSTACHEOPEN, Ah210Parser.SET, Ah210Parser.LABEL]:
                self.state = 124
                self.assignment()
                pass
            elif token in [Ah210Parser.NAME, Ah210Parser.IMPORT, Ah210Parser.EXPORT]:
                self.state = 125
                self.scoping()
                pass
            elif token in [Ah210Parser.LOG]:
                self.state = 126
                self.log()
                pass
            elif token in [Ah210Parser.AUTH]:
                self.state = 127
                self.auth()
                pass
            elif token in [Ah210Parser.URL]:
                self.state = 128
                self.url()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 131
            self.match(Ah210Parser.TERMINATOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Non_terminatedContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def flow(self):
            return self.getTypedRuleContext(Ah210Parser.FlowContext,0)


        def getRuleIndex(self):
            return Ah210Parser.RULE_non_terminated

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNon_terminated" ):
                listener.enterNon_terminated(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNon_terminated" ):
                listener.exitNon_terminated(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNon_terminated" ):
                return visitor.visitNon_terminated(self)
            else:
                return visitor.visitChildren(self)




    def non_terminated(self):

        localctx = Ah210Parser.Non_terminatedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_non_terminated)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.flow()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExecutersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def execute(self):
            return self.getTypedRuleContext(Ah210Parser.ExecuteContext,0)


        def async_execute(self):
            return self.getTypedRuleContext(Ah210Parser.Async_executeContext,0)


        def getRuleIndex(self):
            return Ah210Parser.RULE_executers

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExecuters" ):
                listener.enterExecuters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExecuters" ):
                listener.exitExecuters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExecuters" ):
                return visitor.visitExecuters(self)
            else:
                return visitor.visitChildren(self)




    def executers(self):

        localctx = Ah210Parser.ExecutersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_executers)
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Ah210Parser.COMMANDTAX, Ah210Parser.SCRIPT, Ah210Parser.CUSTOM, Ah210Parser.GET, Ah210Parser.POST, Ah210Parser.PUT, Ah210Parser.PATCH, Ah210Parser.DELETE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.execute()
                pass
            elif token in [Ah210Parser.ASYNC]:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.async_execute()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def labels(self):
            return self.getTypedRuleContext(Ah210Parser.LabelsContext,0)


        def REQUEST(self):
            return self.getToken(Ah210Parser.REQUEST, 0)

        def inject(self):
            return self.getTypedRuleContext(Ah210Parser.InjectContext,0)


        def LPAREN(self):
            return self.getToken(Ah210Parser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Ah210Parser.ExprContext)
            else:
                return self.getTypedRuleContext(Ah210Parser.ExprContext,i)


        def RPAREN(self):
            return self.getToken(Ah210Parser.RPAREN, 0)

        def MINUS(self):
            return self.getToken(Ah210Parser.MINUS, 0)

        def NOT(self):
            return self.getToken(Ah210Parser.NOT, 0)

        def async_execute(self):
            return self.getTypedRuleContext(Ah210Parser.Async_executeContext,0)


        def execute(self):
            return self.getTypedRuleContext(Ah210Parser.ExecuteContext,0)


        def login_statement(self):
            return self.getTypedRuleContext(Ah210Parser.Login_statementContext,0)


        def endpoint_statement(self):
            return self.getTypedRuleContext(Ah210Parser.Endpoint_statementContext,0)


        def casting(self):
            return self.getTypedRuleContext(Ah210Parser.CastingContext,0)


        def count(self):
            return self.getTypedRuleContext(Ah210Parser.CountContext,0)


        def atom(self):
            return self.getTypedRuleContext(Ah210Parser.AtomContext,0)


        def POW(self):
            return self.getToken(Ah210Parser.POW, 0)

        def MUL(self):
            return self.getToken(Ah210Parser.MUL, 0)

        def DIV(self):
            return self.getToken(Ah210Parser.DIV, 0)

        def PLUS(self):
            return self.getToken(Ah210Parser.PLUS, 0)

        def GE(self):
            return self.getToken(Ah210Parser.GE, 0)

        def LE(self):
            return self.getToken(Ah210Parser.LE, 0)

        def GT(self):
            return self.getToken(Ah210Parser.GT, 0)

        def LT(self):
            return self.getToken(Ah210Parser.LT, 0)

        def EQ(self):
            return self.getToken(Ah210Parser.EQ, 0)

        def NEQ(self):
            return self.getToken(Ah210Parser.NEQ, 0)

        def AND(self):
            return self.getToken(Ah210Parser.AND, 0)

        def OR(self):
            return self.getToken(Ah210Parser.OR, 0)

        def getRuleIndex(self):
            return Ah210Parser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = Ah210Parser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==Ah210Parser.REQUEST:
                    self.state = 140
                    self.match(Ah210Parser.REQUEST)


                self.state = 143
                self.labels()
                pass

            elif la_ == 2:
                self.state = 144
                self.inject()
                pass

            elif la_ == 3:
                self.state = 145
                self.match(Ah210Parser.LPAREN)
                self.state = 146
                self.expr(0)
                self.state = 147
                self.match(Ah210Parser.RPAREN)
                pass

            elif la_ == 4:
                self.state = 149
                self.match(Ah210Parser.MINUS)
                self.state = 150
                self.expr(15)
                pass

            elif la_ == 5:
                self.state = 151
                self.match(Ah210Parser.NOT)
                self.state = 152
                self.expr(14)
                pass

            elif la_ == 6:
                self.state = 153
                self.async_execute()
                pass

            elif la_ == 7:
                self.state = 154
                self.execute()
                pass
